# AutoSendNewFilesDiscord

./: .gitignore  README.md  clips_manipulator.py  config.py  example.env  files_handler.py  justfile  main.py  old_clips.txt  pyproject.toml  requirements.txt  ruff.toml  selfbot.py  webhook.py
src/: config.py  files_handler.py  files_manipulator.py
typings/discord_webhook/: __init__.pyi  __main__.pyi  async_webhook.pyi  constants.pyi  webhook.pyi  webhook_exceptions.pyi
